OO-3297, OO-3301: refactor security group management operations in its own DAO, implement isInOrganisation mfunction for course expert rules